--- a/Lab1/intro.html
+++ b/Lab1/intro.html
@@ -9,7 +9,7 @@
   <title>Tytuł strony</title>
 </head>
 <body>
-  <header class="azure">
+  <header class="azure border">
     <!-- Page title -->
     <!-- Background color: #EFF -->
     <!-- Border color: #A8A8A8 -->
@@ -17,7 +17,7 @@
     <h1 class="animation">Tytuł strony</h1>
   </header>
 
-  <nav class="azure">
+  <nav class="azure border">
     <!--Tutaj menu nawigacyjne / Here the navigation menu -->
     <!-- left & right margin: 25px -->
 
@@ -33,7 +33,7 @@
   </nav>
   <!-- Tutaj treść panelu bocznego / Here the content of the side panel-->
 
-  <aside class="azure">
+  <aside class="azure border">
     <h1 class="animation">Panel boczny</h1>
 
     <h2>Ciekawe odsyłacze</h2>
@@ -53,7 +53,7 @@
     </ul>
   </aside>
 
-  <main class="azure">
+  <main class="azure border">
     <!--Tutaj treść strony / Here the content of the page -->
 
     <h1 class="animation">Treść strony</h1>
@@ -63,7 +63,7 @@
     </blockquote>
   </main>
 
-  <footer class="azure">
+  <footer class="azure border">
     <!-- Tutaj treść stopki / Here the content of the footer -->
     <a href="mailto:your.email.address">Imię Nazwisko</a>
   </footer>
