--- a/Strona/index.html
+++ b/Strona/index.html
@@ -43,8 +43,10 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="padding: 0.5rem 1rem;">
-        <a class="navbar-brand" href="#"> <i class="bi bi-shop"></i>
-          Sklep komputerowy </a>
+        <a class="navbar-brand" href="#">
+          <canvas id="canvas" width="50" height="23"></canvas>
+          Sklep komputerowy
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -193,5 +195,23 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
+    <script>  
+      var canvas = document.getElementById('canvas');
+      var ctx = canvas.getContext('2d');
+      ctx.fillStyle='#FFFFFF';     
+      ctx.fillRect(0, 0, 23, 23);
+      ctx.arc(20, 14, 10, 0, 2 * Math.PI, false);
+      ctx.fill();
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(31,9);
+      ctx.lineTo(23,23);
+      ctx.lineTo(40,23);
+      ctx.closePath();
+      ctx.fill();
+      ctx.stroke();
+    </script>
+
   </body>
 </html>
