--- a/Strona/index.html
+++ b/Strona/index.html
@@ -17,11 +17,11 @@
       Sklep komputerowy
     </title>
     <style>
-      .rotate-img {
+      .rotate-card {
         transform-style: preserve-3d;
         transition: transform 0.5s;
       }
-      .rotate-img:hover {
+      .rotate-card:hover {
         animation-name: spin;
         animation-duration: 1s;
         animation-iteration-count: infinite;
@@ -71,7 +71,27 @@
     <div class="container">
       <div class="row">
         <div class="col-xxl-4 col-lg-6">
-          <div class="card" style="width: 25rem; margin: 2rem;">
+          <div class="card rotate-card" style="width: 25rem; margin: 2rem;">
+            <img class="card-img-top" src="comp.jpg" alt="Komputer">
+            <div class="card-body">
+                <h5 class="card-title"> Super komputer </h5>
+                <ul>
+                    <li>Procesor: Intel Core i9-11900K</li>
+                    <li>Płyta główna: ASUS ROG Maximus XIII Hero</li>
+                    <li>Karta graficzna: NVIDIA GeForce RTX 3080 Ti</li>
+                    <li>Pamięć RAM: G.Skill Trident Z RGB DDR4 32GB</li>
+                    <li>Dysk twardy: Samsung 970 EVO Plus NVMe SSD 1TB</li>
+                    <li>Napęd optyczny: LG WH16NS60 16x Blu-ray Burner</li>
+                    <li>Zasilacz: Corsair RM850x 850W 80+ Gold Certified Fully Modular</li>
+                    <li>Klawiatura: Logitech G915 TKL Wireless Mechanical Gaming Keyboard</li>
+                    <li>Mysz: Razer DeathAdder V2 Pro Wireless Gaming Mouse</li>
+                    <li>Monitor: ASUS ROG Swift PG279QZ 27" 1440p 165Hz IPS</li>
+                </ul>
+            </div>
+        </div>
+        </div>
+        <div class="col-xxl-4 col-lg-6">
+          <div class="card rotate-card" style="width: 25rem; margin: 2rem;">
             <img class="card-img-top img-fluid rotate-img" src="comp.jpg" alt="Komputer">
             <div class="card-body">
                 <h5 class="card-title"> Super komputer </h5>
@@ -91,27 +111,7 @@
         </div>
         </div>
         <div class="col-xxl-4 col-lg-6">
-          <div class="card" style="width: 25rem; margin: 2rem;">
-            <img class="card-img-top img-fluid rotate-img" src="comp.jpg" alt="Komputer">
-            <div class="card-body">
-                <h5 class="card-title"> Super komputer </h5>
-                <ul>
-                    <li>Procesor: Intel Core i9-11900K</li>
-                    <li>Płyta główna: ASUS ROG Maximus XIII Hero</li>
-                    <li>Karta graficzna: NVIDIA GeForce RTX 3080 Ti</li>
-                    <li>Pamięć RAM: G.Skill Trident Z RGB DDR4 32GB</li>
-                    <li>Dysk twardy: Samsung 970 EVO Plus NVMe SSD 1TB</li>
-                    <li>Napęd optyczny: LG WH16NS60 16x Blu-ray Burner</li>
-                    <li>Zasilacz: Corsair RM850x 850W 80+ Gold Certified Fully Modular</li>
-                    <li>Klawiatura: Logitech G915 TKL Wireless Mechanical Gaming Keyboard</li>
-                    <li>Mysz: Razer DeathAdder V2 Pro Wireless Gaming Mouse</li>
-                    <li>Monitor: ASUS ROG Swift PG279QZ 27" 1440p 165Hz IPS</li>
-                </ul>
-            </div>
-        </div>
-        </div>
-        <div class="col-xxl-4 col-lg-6">
-          <div class="card" style="width: 25rem; margin: 2rem;">
+          <div class="card rotate-card" style="width: 25rem; margin: 2rem;">
             <img class="card-img-top img-fluid rotate-img" src="comp.jpg" alt="Komputer">
             <div class="card-body">
                 <h5 class="card-title"> Super komputer </h5>
@@ -133,12 +133,12 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <div class="card">
+          <div class="card rotate-card">
             <img class="card-img-top img-fluid rotate-img" src="mouse.jpg" alt="Myszka">
           </div>
         </div>
         <div class="col-md-6">
-          <div class="card">
+          <div class="card rotate-card">
             <img class="card-img-top img-fluid rotate-img" src="mouse.jpg" alt="Myszka">
           </div>
         </div>
