--- a/Strona/index.html
+++ b/Strona/index.html
@@ -13,6 +13,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+          <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>
       Sklep komputerowy
     </title>
@@ -39,6 +40,7 @@
         }
       }
     </style>
+    <script src="lab2.js" defer></script>
   </head>
   <body>
 
@@ -67,6 +69,15 @@
             </ul>
         </div>
     </nav>
+
+    <form  style="margin: 2rem;">
+			<div class="form-group">
+				<textarea class="form-control" rows="3" id="textarea"></textarea>
+			</div>
+			<button type="button" class="btn btn-primary" onclick="readCommands()"> Submit </button>
+		</form>
+
+    <canvas id="chart" width="500" height="200"></canvas>
 
     <div class="container">
       <div class="row">
@@ -193,7 +204,6 @@
       
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
     <script>  
